Fixed option auto-refresh
Fixed the script to interact with option add time
Changed the option add time to be invisible on the page

--- a/Web App/httpdocs/css/style.css
+++ b/Web App/httpdocs/css/style.css
@@ -79,8 +79,9 @@ td { vertical-align: top; }
 	display: none;
 }
 
-
-
+#last_option_add_time{
+	display: none;
+}
 
 
 
